@@ -1,5 +1,10 @@
+2004-03-01  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
+
+	* src/UniformPanel.cpp: Much better animation.
+
 2004-02-28  Bryan Chan <b8chan@uwaterloo.ca>
-	* src/ShrikeCanvas.?pp src/ShrikeFrame.?pp:
+
+	* src/ShrikeCanvas.?pp, src/ShrikeFrame.?pp:
 	Switched to ShObjMesh
 	
 2004-02-27  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
